
2017-10-30  Simon 'sf-mensch/human' Sobisch <simonsobisch@gnu.org>

	* configure.ac: if --with-vbisam is given: check for isfullclose
	  (available since 2.0) instead of isopen (available since 1.0)

2017-10-28  Simon 'sf-mensch/human' Sobisch <simonsobisch@gnu.org>

	* configure.ac: fixed --with-curses (without option) and adjusted its
	  help text

2017-10-22  Simon 'sf-mensch/human' Sobisch <simonsobisch@gnu.org>

	* configure.ac: revised all uses of AC_RUN_IFELSE and changed to
	  AC_COMPILE_IFELSE where the preparser output is enough
	* configure.ac: allow cross-compiling with --host and --build;
	  allow to change compiler executable called by cobc with COB_CC
	* extras/Makefile.am, doc/Makefile.am: don't call generated binaries
	  if not possible because of cross-compiling

2017-10-19  Simon 'sf-mensch/human' Sobisch <simonsobisch@gnu.org>

	* bin/Makefile.am, cobcrun/Makefile.am: fixed bug #448 parallel build
	  breaking by matching prerequisites 100% (pointed out by Nick Bowler)

2017-08-13  Simon 'sf-mensch/human' Sobisch <simonsobisch@gnu.org>

	* general: removed all Makefiles and configure script generated by
	  autoconf and automake from version control - use build_aux/bootstrap
	* Makefile.am: ensure correct time stamps for make dist
	* configure.ac: adjusted GMP version checks,
	  substitute COB_HAS_64_BIT_POINTER for use in testsuite

2017-08-08  Simon 'sf-mensch/human' Sobisch <simonsobisch@gnu.org>

	* create_win_dist.sh: remove ".in" suffix from template files config.h.in
	  and defaults.h.in in generated win dist package

2017-07-19  Simon 'sf-mensch/human' Sobisch <simonsobisch@gnu.org>

	* configure.ac: version bump to 2.3-dev

2017-07-13  Simon 'sf-mensch/human' Sobisch <simonsobisch@gnu.org>

	* configure.ac [_BSD_SOURCE]: set COB_HAS_UTC_OFFSET to "yes" if C compiler
	  defines _BSD_SOURCE as we can access the offset directly in this case
	* configure.ac: output detailed version information for BDB, if available
