@@ -1,4 +1,9 @@
 
+2017-11-05  Simon 'sf-mensch/human' Sobisch <simonsobisch@gnu.org>
+
+	* configure.ac: new template COB_COMPUTED_GOTO, defined if
+	  computed gotos can be compiled
+
 2017-10-30  Simon 'sf-mensch/human' Sobisch <simonsobisch@gnu.org>
 
 	* configure.ac: if --with-vbisam is given: check for isfullclose
